fix:update response when delete a post
